--- a/app/src/main/res/layout/character.xml
+++ b/app/src/main/res/layout/character.xml
@@ -111,11 +111,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="29dp"
                 android:text="Pilot"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.134"
+                app:layout_constraintHorizontal_bias="0.104"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
-                tools:layout_editor_absoluteY="107dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
