--- a/app/src/main/res/layout/character.xml
+++ b/app/src/main/res/layout/character.xml
@@ -86,13 +86,12 @@
 
             <TextView
                 android:id="@+id/tv_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:layout_width="108dp"
+                android:layout_height="20dp"
                 android:text="Citadel of Ricks"
                 app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.298"
+                app:layout_constraintHorizontal_bias="0.322"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
