--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.screen.character_details.CharacterDetails">
 
 
@@ -13,17 +13,15 @@
         android:layout_height="123dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_charStat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_charName"
         tools:src="@tools:sample/avatars" />
-
 
     <TextView
         android:id="@+id/tv_charName"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        android:text="TextView"
+        android:text="Rick Sachez"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,39 +30,45 @@
 
     <TextView
         android:id="@+id/tv_charStat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_width="80dp"
+        android:layout_height="29dp"
+        android:text="Alive"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_gender"
+        android:layout_width="59dp"
         android:layout_height="22dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="9dp"
+        android:text="Male"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/tv_charStat"
+        app:layout_constraintEnd_toStartOf="@+id/tv_species"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.127" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_species"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:layout_marginTop="8dp"
+        android:text="Human"
+        app:layout_constraintBottom_toTopOf="@+id/tv_charStat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/tv_gender"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.127" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView8"
@@ -76,40 +80,20 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_origName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_charStat" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_charStat"
+        app:layout_constraintVertical_bias="0.5" />
 
-    <TextView
+    <Button
         android:id="@+id/tv_origName"
-        android:layout_width="93dp"
-        android:layout_height="19dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/tv_origType"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <TextView
-        android:id="@+id/tv_origType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/tv_origDimen"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_origName" />
-
-    <TextView
-        android:id="@+id/tv_origDimen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_width="187dp"
+        android:layout_height="46dp"
+        android:text="Earth(C-137)"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_origType" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/textView12"
@@ -120,42 +104,49 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_charLocation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_origDimen" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_origName"
+        app:layout_constraintVertical_bias="0.5" />
 
-    <TextView
+    <Button
         android:id="@+id/tv_charLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/tv_charLocationType"
+        android:text="Citadel of Ricks"
+        app:layout_constraintBottom_toTopOf="@+id/textview_ep"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
-        android:id="@+id/tv_charLocationType"
+        android:id="@+id/textview_ep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/tv_charLocDimention"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tv_epNum"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_charLocation" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_charLocation"
+        app:layout_constraintVertical_bias="0.5"
+        tools:text="Episodes:" />
 
-    <TextView
-        android:id="@+id/tv_charLocDimention"
-        android:layout_width="66dp"
-        android:layout_height="24dp"
-        android:text="TextView"
+    <Button
+        android:id="@+id/tv_epNum"
+        android:layout_width="77dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="171dp"
+        android:layout_marginEnd="171dp"
+        android:text="50"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_charLocationType"
+        app:layout_constraintTop_toBottomOf="@+id/textview_ep"
         app:layout_constraintVertical_bias="0.5" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
