--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/btn_back"
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="60dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
         <ImageView
@@ -24,7 +24,7 @@
             android:text="@string/rick_and_morty"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:gravity="center_vertical"/>
     </LinearLayout>
 
