--- a/app/src/main/res/layout/fragment_character_appearances.xml
+++ b/app/src/main/res/layout/fragment_character_appearances.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/material_dynamic_neutral95"
+    android:background="@color/light_blue"
     android:padding="10dp"
     android:gravity="center_horizontal"
     tools:context=".screens.character_appearances.CharacterAppearancesFragment">
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="22sp"
         android:text="@string/character_appearances" />
     <androidx.recyclerview.widget.RecyclerView
