--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/material_dynamic_neutral10"
+    android:background="@color/blue"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:layout_margin="10dp"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:text="@string/status"
-        android:textColor="@color/cream"
+        android:textColor="@color/light_blue"
         android:textSize="15sp" />
 
     <LinearLayout
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:text="@string/species"
-            android:textColor="@color/cream"
+            android:textColor="@color/light_blue"
             android:textSize="15sp" />
 
         <TextView
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/gender"
-            android:textColor="@color/cream"
+            android:textColor="@color/light_blue"
             android:textSize="15sp" />
     </LinearLayout>
 
@@ -86,11 +86,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:backgroundTint="@color/material_dynamic_neutral40"
+                android:backgroundTint="@color/light_blue"
                 android:letterSpacing=".05"
                 android:paddingHorizontal="10dp"
                 android:text="@string/origin"
-                android:textColor="@color/cream"
+                android:textColor="@color/blue"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -116,11 +116,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:backgroundTint="@color/material_dynamic_neutral40"
+                android:backgroundTint="@color/light_blue"
                 android:letterSpacing=".05"
                 android:paddingHorizontal="10dp"
                 android:text="@string/location"
-                android:textColor="@color/cream"
+                android:textColor="@color/blue"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
@@ -146,11 +146,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:backgroundTint="@color/material_dynamic_neutral40"
+                android:backgroundTint="@color/light_blue"
                 android:letterSpacing=".05"
                 android:paddingHorizontal="10dp"
                 android:text="@string/episodes"
-                android:textColor="@color/cream"
+                android:textColor="@color/blue"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
