--- a/app/src/main/res/layout/fragment_episodes_list.xml
+++ b/app/src/main/res/layout/fragment_episodes_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_blue"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".screens.episodes_list.EpisodesListFragment">
@@ -11,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="20dp"
-        android:background="@color/material_dynamic_neutral10"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_char_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
             android:background="@drawable/ic_launcher_foreground" />
 
@@ -28,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="@string/episodes"
             android:textStyle="bold"
-            android:textColor="@color/cream"
+            android:textColor="@color/blue"
             android:textSize="20sp"/>
     </LinearLayout>
 
@@ -40,7 +41,6 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
         tools:listitem="@layout/thumbnail_episode"
-        android:background="@color/material_dynamic_neutral90"
         tools:itemCount="10"/>
 
 </LinearLayout>
