--- a/app/src/main/res/layout/fragment_location_details.xml
+++ b/app/src/main/res/layout/fragment_location_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/material_dynamic_neutral20"
+    android:background="@color/light_blue"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".screens.location_details.LocationDetailsFragment">
@@ -12,17 +12,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tv_loc_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/location_name"
-            android:textColor="@color/cream"
+            android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -31,14 +30,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:textColor="@color/cream"
+            android:textColor="@color/blue"
             android:text="@string/location_type" />
 
         <TextView
             android:id="@+id/tv_loc_dimension"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/cream"
+            android:textColor="@color/blue"
             android:text="@string/dimenstion" />
 
     </LinearLayout>
@@ -49,7 +48,7 @@
         android:padding="10dp"
         android:text="@string/residents"
         android:textStyle="bold"
-        android:textColor="@color/cream"
+        android:textColor="@color/blue"
         android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
