--- a/app/src/main/res/layout/thumbnail_dashboard.xml
+++ b/app/src/main/res/layout/thumbnail_dashboard.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="5dp"
                 android:text="@string/name"
-                android:textColor="@color/black"
+                android:textColor="@color/blue"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -52,7 +52,7 @@
                     android:layout_marginEnd="20dp"
                     android:paddingVertical="5dp"
                     android:text="@string/status"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/blue" />
 
                 <TextView
                     android:id="@+id/tv_thumbnail_species"
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:paddingVertical="5dp"
                     android:text="@string/species"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/blue" />
             </LinearLayout>
 
             <TextView
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="5dp"
                 android:text="@string/last_known_location"
-                android:textColor="@color/black" />
+                android:textColor="@color/blue" />
 
             <TextView
                 android:id="@+id/tv_first_episode"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="5dp"
                 android:text="@string/first_seen_in"
-                android:textColor="@color/black" />
+                android:textColor="@color/blue" />
         </LinearLayout>
     </LinearLayout>
 
