--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -136,6 +136,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_episode"
             android:layout_marginTop="100dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -154,9 +155,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-
-
-
     </LinearLayout>
 
 </LinearLayout>
