--- a/app/src/main/res/layout/fragment_character_episodes.xml
+++ b/app/src/main/res/layout/fragment_character_episodes.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/ll_action_bar"
         android:background="@color/design_default_color_primary"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize">
+
         <Button
             android:id="@+id/btn_back"
             android:drawableLeft="@drawable/ic_baseline_backspace_24"
@@ -25,54 +27,37 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="60dp"
+        android:layout_marginTop="30sp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_action_bar">
+
+        <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"/>
 
         <TextView
-            android:id="@+id/tv_location_name"
-            android:text="Location Name"
-            android:textSize="25dp"
+            android:id="@+id/tv_name"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="20sp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
-        <TextView
-            android:id="@+id/tv_location_type"
-            android:text="Location Type"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/tv_location_dimension"
-            android:text="Dimension"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:text="Residents"
-            android:textSize="22dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:layout_marginTop="30sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/location_details_recycler_view"
+        android:id="@+id/character_episodes_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -80,6 +65,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/location_details" />
+        tools:listitem="@layout/character_episodes" />
 
 </LinearLayout>
