--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_characterDetailsFragment_to_dashboardFragment"
             app:destination="@id/dashboardFragment" />
+        <action
+            android:id="@+id/action_characterDetailsFragment_to_characterEpisodesFragment"
+            app:destination="@id/characterEpisodesFragment" />
     </fragment>
     <fragment
         android:id="@+id/locationDetailsFragment"
@@ -33,5 +36,22 @@
         <argument
             android:name="id"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_locationDetailsFragment_to_characterDetailsFragment"
+            app:destination="@id/characterDetailsFragment" />
+        <action
+            android:id="@+id/action_locationDetailsFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/characterEpisodesFragment"
+        android:name="com.rave.rickandmortyv2.presentation.screens.character_episodes.CharacterEpisodesFragment"
+        android:label="CharacterEpisodesFragment" >
+        <argument
+            android:name="id"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_characterEpisodesFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
 </navigation>
