--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,7 +39,7 @@
             app:destination="@id/charDetails" />
         <argument
             android:name="locationId"
-            app:argType="string" />
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/characterEpisodeList"
