--- a/app/src/main/res/layout/char_list.xml
+++ b/app/src/main/res/layout/char_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/teal_200">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardHolder"
@@ -14,6 +15,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:backgroundTint="@color/black"
+        app:cardCornerRadius="@android:dimen/thumbnail_height"
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,8 +26,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_margin="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints"
@@ -32,6 +35,8 @@
 
             <TextView
                 android:id="@+id/tv_title"
+                android:textColor="@color/white"
+                android:shadowColor="@color/white"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
@@ -47,6 +52,7 @@
 
             <TextView
                 android:id="@+id/tv_species"
+                android:textColor="@color/white"
                 android:layout_width="75dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
@@ -69,6 +75,7 @@
                 android:hint="alive"
                 android:textSize="15sp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@id/tv_location"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.526"
@@ -81,6 +88,7 @@
                 android:id="@+id/tv_location"
                 android:layout_width="158dp"
                 android:layout_height="20dp"
+                android:textColor="@color/white"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
                 android:hint="Citadel of Ricks"
@@ -95,6 +103,7 @@
 
             <TextView
                 android:id="@+id/tv_locationHard"
+                android:textColor="@color/white"
                 android:layout_width="158dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
@@ -113,6 +122,7 @@
                 android:id="@+id/tv_episodeHard"
                 android:layout_width="158dp"
                 android:layout_height="20dp"
+                android:textColor="@color/white"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
                 android:text="First Seen in"
@@ -127,6 +137,7 @@
 
             <TextView
                 android:id="@+id/tv_episode"
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_marginStart="10dp"
