Working on remote mediator

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -72,6 +72,6 @@
             app:destination="@id/characterEpisode" />
         <argument
             android:name="episodeId"
-            app:argType="string" />
+            app:argType="integer" />
     </fragment>
 </navigation>
