--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -124,7 +124,7 @@
         android:id="@+id/textview_ep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Episodes"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_epNum"
