--- a/app/src/main/res/layout/fragment_episode_char_appearance.xml
+++ b/app/src/main/res/layout/fragment_episode_char_appearance.xml
@@ -6,18 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".presentation.screens.location_details.LocationDetails">
 
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <TextView
-        android:id="@+id/tv_locateName"
+        android:id="@+id/tv_episodeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Episode"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@id/locate_type"
+        app:layout_constraintBottom_toTopOf="@id/air_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +20,7 @@
 
 
     <TextView
-        android:id="@+id/locate_type"
+        android:id="@+id/air_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -35,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_locateName" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_episodeName" />
 
     <TextView
         android:id="@+id/tv_dimension"
@@ -48,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_locateName"
+        app:layout_constraintTop_toBottomOf="@id/tv_episodeName"
         app:layout_constraintVertical_bias="0.112" />
 
     <TextView
@@ -58,7 +53,7 @@
         android:gravity="center"
         android:text="Character Appearance"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@id/rv_location"
+        app:layout_constraintBottom_toTopOf="@id/rv_appearance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +61,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_location"
+        android:id="@+id/rv_appearance"
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:layout_gravity="center"
