--- a/app/src/main/res/layout/fragment_location_details.xml
+++ b/app/src/main/res/layout/fragment_location_details.xml
@@ -12,12 +12,12 @@
     android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/tv_locateName"
+        android:id="@+id/tv_episodeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOCATION"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@id/locate_type"
+        app:layout_constraintBottom_toTopOf="@id/air_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
 
 
     <TextView
-        android:id="@+id/locate_type"
+        android:id="@+id/air_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_locateName" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_episodeName" />
 
     <TextView
         android:id="@+id/tv_dimension"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_locateName"
+        app:layout_constraintTop_toBottomOf="@id/tv_episodeName"
         app:layout_constraintVertical_bias="0.112" />
 
     <TextView
