all functionality complete except Remote Mediator

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,5 +60,8 @@
         <argument
             android:name="episodeId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_episodeCharAppearance_to_charDetails"
+            app:destination="@id/charDetails" />
     </fragment>
 </navigation>
