--- a/app/src/main/res/layout/character_episodes.xml
+++ b/app/src/main/res/layout/character_episodes.xml
@@ -6,7 +6,8 @@
     android:background="#bdc8c9"
     android:layout_marginRight="20sp"
     android:layout_marginLeft="20sp"
-    android:layout_marginBottom="20sp">
+    android:layout_marginBottom="20sp"
+    android:id="@+id/c_character_episode">
 
     <TextView
         android:id="@+id/tv_episode_name"
@@ -17,7 +18,6 @@
         android:layout_marginTop="5sp"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="lala"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_episode_number"
@@ -30,7 +30,6 @@
         android:paddingLeft="25sp"
         android:layout_marginTop="5sp"
         android:layout_height="wrap_content"
-        android:text="lala"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/tv_episode_name"
